k8s/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: devops
spec:
  type: ClusterIP
  selector:
    app: httpd
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
